delete user, test changes

--- a/sample.env
+++ b/sample.env
@@ -6,3 +6,7 @@ DB_USER=root
 DB_PASS=s1mpl3
 DB_PORT=27017
 DB_DB=livefeed-api
+
+#can be turned off.
+API_ALLOW_DELETE_USER=1
+API_ALLOW_DELETE_FEED=1
